@@ -24,6 +24,12 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include <config.h>
 #endif
 
+// The following definitions are commented out because they cause
+// trouble on some systems.  What is really needed is a feature test
+// in the configure script.
+
+#if 0
+
 // I am told that without _BSD_SOURCE, tm_zone won't be declared on
 // some systems.  Defining _XOPEN_SOURCE provides the declaration for
 // strptime on some others.
@@ -41,6 +47,8 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #if !defined (_XOPEN_SOURCE)
 #define _XOPEN_SOURCE 1
 #define OCTAVE_UNDEFINE_XOPEN_SOURCE
+#endif
+
 #endif
 
 #include <climits>
